增加dev和调整部分配置位置

--- a/static/wp/src/m_order/jsi.html
+++ b/static/wp/src/m_order/jsi.html
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="https://st.midea.com/wp/dist/library/vue.js"></script>
+<script type="text/javascript" src="https://st.midea.com/wp/dist/library/vue-router.js"></script>
 {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
 <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
 {% } %}
